--- a/readme
+++ b/readme
@@ -1,6 +1,9 @@
-这段代码主要应用于核查个人是否是医生或者是护士，依靠的数据源是
+fateadm_api和demo这两段代码主要应用于核查个人是否是医生或者是护士，依靠的数据源是
 http://zgcx.nhc.gov.cn:9090/Doctor
 http://zgcx.nhc.gov.cn:9090/Nurse
 需要的信息是个人的姓名和所在医疗机构
+
+后来发现这个成功率也不是很高（主要是原始填表的时候也并不严格）
+所以新设计了抓取每个 医院+姓名 的百度页，做人工检查
 
 代码仅供参考~ 请勿用于非法用途
